# daoyi-vue-rs

./: .gitignore  Cargo.toml  README.md  开发手册.md
crates/bins/daoyi-demo/: Cargo.toml
crates/bins/daoyi-demo/src/: main.rs
crates/bins/daoyi-module-system/: Cargo.toml
crates/bins/daoyi-module-system/src/: main.rs
crates/bins/daoyi-server/: Cargo.toml
crates/bins/daoyi-server/src/: lib.rs  main.rs
crates/libs/daoyi-api-demo/: Cargo.toml
crates/libs/daoyi-api-demo/src/: lib.rs
crates/libs/daoyi-api-demo/src/demo_api/: auth.rs  mod.rs  user.rs
crates/libs/daoyi-api-system/: Cargo.toml
crates/libs/daoyi-api-system/src/: lib.rs
crates/libs/daoyi-api-system/src/system_api/: auth.rs  dict_data.rs  dict_type.rs  mod.rs  notify_message.rs  notify_template.rs  oauth2.rs  tenant.rs
crates/libs/daoyi-common-support/: Cargo.toml
crates/libs/daoyi-common-support/src/: lib.rs
crates/libs/daoyi-common-support/src/app/: mod.rs
crates/libs/daoyi-common-support/src/auth/: jwt_auth.rs  mod.rs  sa_token_auth.rs
crates/libs/daoyi-common-support/src/configs/: mod.rs
crates/libs/daoyi-common-support/src/configs/auth_config/: mod.rs
crates/libs/daoyi-common-support/src/configs/database_config/: mod.rs
crates/libs/daoyi-common-support/src/configs/jwt_config/: mod.rs
crates/libs/daoyi-common-support/src/configs/log_config/: mod.rs
crates/libs/daoyi-common-support/src/configs/nacos_config/: mod.rs
crates/libs/daoyi-common-support/src/configs/redis_config/: mod.rs
crates/libs/daoyi-common-support/src/configs/server_config/: mod.rs
crates/libs/daoyi-common-support/src/context/: mod.rs
crates/libs/daoyi-common-support/src/database/: mod.rs
crates/libs/daoyi-common-support/src/enumeration/: mod.rs  redis_keys.rs
crates/libs/daoyi-common-support/src/error/: mod.rs
crates/libs/daoyi-common-support/src/id/: mod.rs
crates/libs/daoyi-common-support/src/logger/: mod.rs
crates/libs/daoyi-common-support/src/middlewares/: jwt_auth_layer.rs  mod.rs  simple_auth_layer.rs  trace_layer.rs
crates/libs/daoyi-common-support/src/models/: pagination.rs
crates/libs/daoyi-common-support/src/password/: mod.rs
crates/libs/daoyi-common-support/src/redis_utils/: mod.rs
crates/libs/daoyi-common-support/src/request/: json.rs  mod.rs  path.rs  query.rs  valid.rs  validation.rs
crates/libs/daoyi-common-support/src/response/: mod.rs
crates/libs/daoyi-common-support/src/serde/: mod.rs
crates/libs/daoyi-common-support/src/server/: mod.rs
crates/libs/daoyi-common-support/src/vo/: mod.rs
crates/libs/daoyi-common-support/src/vo/system_vo/: mod.rs
crates/libs/daoyi-entity-demo/: Cargo.toml
crates/libs/daoyi-entity-demo/src/: lib.rs
crates/libs/daoyi-entity-demo/src/demo_entity/: sys_user.rs
crates/libs/daoyi-entity-system/: Cargo.toml
crates/libs/daoyi-entity-system/src/: lib.rs
crates/libs/daoyi-entity-system/src/system_entity/: mod.rs  prelude.rs  system_access_token.rs  system_dict_data.rs  system_dict_type.rs  system_menu.rs  system_role.rs  system_role_menu.rs  system_tenant.rs  system_user_role.rs  system_users.rs
crates/libs/daoyi-entity-system/src/system_service/: mod.rs  system_access_token_service.rs  system_dict_data_service.rs  system_menu_service.rs  system_role_menu_service.rs  system_role_service.rs  system_tenant_service.rs  system_user_role_service.rs  system_users_service.rs
crates/libs/daoyi-macros/: Cargo.toml
crates/libs/daoyi-macros/src/: lib.rs
docs/db/: demo-schema.sql  system-schema.sql
docs/sea-orm-entities/system/: mod.rs  prelude.rs  system_access_token.rs  system_dict_data.rs  system_dict_type.rs  system_menu.rs  system_role.rs  system_role_menu.rs  system_tenant.rs  system_user_role.rs  system_users.rs
resources/: application.yaml  daoyi-demo-dev.yaml  daoyi-demo-local.yaml.example
