[workspace]
members = ["crates/libs/*", "crates/bins/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
description = """
daoyi-vue-rs
"""
license = "MIT"
authors = ["Gemiman <<gemiman@vip.qq.com>>"]
readme = "README.md"

[workspace.dependencies]
daoyi-common-support = { version = "0.1.0", path = "./crates/libs/daoyi-common-support" }
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
tracing-appender = { version = "0.2.4" }
config = { version = "0.15.19", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = { version = "1.0.100" }

[package]
name = "daoyi-vue-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
