[workspace]
members = ["crates/libs/*", "crates/bins/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
description = """
daoyi-vue-rs
"""
license = "MIT"
authors = ["Gemiman <<gemiman@vip.qq.com>>"]
readme = "README.md"

[workspace.dependencies]
daoyi-common-support = { version = "0.1.0", path = "./crates/libs/daoyi-common-support" }
daoyi-entity-demo = { version = "0.1.0", path = "./crates/libs/daoyi-entity-demo" }
daoyi-api-demo = { version = "0.1.0", path = "./crates/libs/daoyi-api-demo" }
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
tracing-appender = { version = "0.2.4" }
config = { version = "0.15.19", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = { version = "1.0.100" }
merge = { version = "0.2.0" }
sea-orm = { version = "1.1.19", features = ["with-chrono", "debug-print", "sqlx-postgres", "with-rust_decimal", "runtime-tokio"] }
num_cpus = { version = "1.17.0" }
thiserror = { version = "2.0.17" }
tower-http = { version = "0.6.8", features = ["trace"] }
xid = { version = "1.1.1" }

[package]
name = "daoyi-vue-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
