[workspace]
members = ["crates/libs/*", "crates/bins/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
description = """
daoyi-vue-rs
"""
license = "MIT"
authors = ["Gemiman <<gemiman@vip.qq.com>>"]
readme = "README.md"

[workspace.dependencies]
daoyi-common-support = { version = "0.1.0", path = "./crates/libs/daoyi-common-support" }
daoyi-entity-demo = { version = "0.1.0", path = "./crates/libs/daoyi-entity-demo" }
daoyi-api-demo = { version = "0.1.0", path = "./crates/libs/daoyi-api-demo" }
daoyi-entity-system = { version = "0.1.0", path = "./crates/libs/daoyi-entity-system" }
daoyi-api-system = { version = "0.1.0", path = "./crates/libs/daoyi-api-system" }
daoyi-macros = { version = "0.1.0", path = "./crates/libs/daoyi-macros" }
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
tracing-appender = { version = "0.2.4" }
config = { version = "0.15.19", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
anyhow = { version = "1.0.100" }
merge = { version = "0.2.0" }
sea-orm = { version = "1.1.19", features = ["with-chrono", "debug-print", "sqlx-postgres", "with-rust_decimal", "runtime-tokio"] }
num_cpus = { version = "1.17.0" }
thiserror = { version = "2.0.17" }
tower-http = { version = "0.6.8", features = ["trace", "timeout", "limit", "cors", "normalize-path", "auth"] }
xid = { version = "1.1.1" }
bytesize = "2.3.1"
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = { version = "0.24.0", features = ["full_validator"] }
regex = "1.12.2"
idgenerator = "2.0.0"
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
wax = { version = "0.6.0" }
humantime = { version = "2.3.0" }
nacos-sdk = { version = "0.5.3", features = ["default"] }
redis = { version = "1.0.1", features = ["tokio-comp"] }
deadpool-redis = { version = "0.22.0" }
sa-token-plugin-axum = { version = "0.1.12", features = ["redis"] }
sa-token-storage-redis = { version = "0.1.12" }

[package]
name = "daoyi-vue-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
