[package]
name = "daoyi-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
daoyi-common-support.workspace = true