[package]
name = "daoyi-api-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
daoyi-common-support.workspace = true
axum.workspace = true
daoyi-entity-demo.workspace = true
sea-orm.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
validator.workspace = true
axum-valid.workspace = true
