[package]
name = "daoyi-api-system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
daoyi-common-support.workspace = true
axum.workspace = true
daoyi-entity-system.workspace = true
sea-orm.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
validator.workspace = true
sa-token-plugin-axum.workspace = true
