[package]
name = "daoyi-common-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
config.workspace = true
serde.workspace = true
anyhow.workspace = true
tokio.workspace = true
merge.workspace = true
sea-orm.workspace = true
num_cpus.workspace = true
axum.workspace = true
thiserror.workspace = true
tower-http.workspace = true
xid.workspace = true
bytesize.workspace = true
validator.workspace = true
axum-valid.workspace = true
regex.workspace = true
idgenerator.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
wax.workspace = true
humantime.workspace = true
nacos-sdk.workspace = true