[package]
name = "daoyi-entity-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
daoyi-common-support.workspace = true
sea-orm.workspace = true
serde.workspace = true