[package]
name = "daoyi-entity-system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
daoyi-common-support.workspace = true
daoyi-macros.workspace = true
sea-orm.workspace = true
serde.workspace = true
anyhow.workspace = true